--- a/index.html
+++ b/index.html
@@ -1,181 +1,214 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fetch API from URL</title>
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Fetch Data Example</title>
+    <!-- Tambahkan Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #e9ecef;
-            padding: 20px;
-            background-size: cover;
-            background-position: center;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background-color: #ffffff;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            padding: 30px;
-        }
-
-        h2 {
-            color: #495057;
-            text-align: center;
-            margin-bottom: 30px;
-        }
-
-        #apiUrlInput {
-            width: 100%;
-        }
-
-        #fetchDataButton {
-            margin-top: 10px;
-            width: 100%;
-            background-color: #007bff;
-            border: none;
-        }
-
-        #fetchDataButton:hover {
-            background-color: #0056b3;
-        }
-
-        table {
-            margin-top: 20px;
-        }
-
-        table, th, td {
-            border: 1px solid #dee2e6;
-        }
-
-        th {
-            background-color: #007bff;
-            color: white;
-        }
-
-        th, td {
-            padding: 12px;
-            text-align: left;
-        }
-
-        #error-message {
-            color: red;
-            margin-top: 10px;
-            text-align: center;
-        }
+      /* Atur ukuran dan posisi canvas */
+      #particleCanvas {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none; /* Agar tidak mengganggu interaksi UI */
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body class="bg-green-100 relative overflow-hidden">
+    <!-- Canvas untuk partikel -->
+    <canvas id="particleCanvas"></canvas>
 
-<div class="container">
-    <h2>Fetch Data from API</h2>
+    <div class="container mx-auto p-6 relative z-10">
+      <h1 class="text-2xl font-bold mb-6 text-center text-green-800">
+        Fetch Data and Display in Table
+      </h1>
 
-    <!-- Input field for API URL -->
-    <div class="mb-3">
-        <label for="apiUrlInput" class="form-label">API Endpoint URL:</label>
-        <input type="text" id="apiUrlInput" class="form-control" placeholder="Enter API URL">
-        <button id="fetchDataButton" class="btn btn-primary">Fetch Data</button>
+      <!-- Section Input URL dan Tabel yang Berdekatan -->
+      <div class="bg-white shadow-lg rounded-lg p-6">
+        <!-- Input URL -->
+        <div class="flex justify-center mb-4">
+          <input
+            type="text"
+            id="urlInput"
+            placeholder="https://jsonplaceholder.typicode.com/posts"
+            class="border border-green-300 rounded-md p-2 w-full max-w-lg focus:outline-none focus:ring-2 focus:ring-green-500"
+          />
+          <button
+            onclick="fetchData()"
+            class="ml-2 bg-green-500 text-white p-2 rounded-md hover:bg-green-600 focus:ring-2 focus:ring-green-400"
+          >
+            Fetch Data
+          </button>
+        </div>
+
+        <!-- Tabel Hasil Fetch -->
+        <div id="result-section" class="overflow-x-auto">
+          <table class="min-w-full bg-white border border-green-200 shadow-lg">
+            <thead>
+              <tr>
+                <th
+                  class="py-2 px-4 border-b bg-green-200 text-left text-sm font-semibold text-green-700"
+                >
+                  ID
+                </th>
+                <th
+                  class="py-2 px-4 border-b bg-green-200 text-left text-sm font-semibold text-green-700"
+                >
+                  Title
+                </th>
+                <th
+                  class="py-2 px-4 border-b bg-green-200 text-left text-sm font-semibold text-green-700"
+                >
+                  Body
+                </th>
+              </tr>
+            </thead>
+            <tbody id="tableBody" class="divide-y divide-green-200">
+              <!-- Data fetched akan dimasukkan di sini -->
+            </tbody>
+          </table>
+        </div>
+
+        <!-- Pagination Controls -->
+        <div class="flex justify-between items-center mt-4">
+          <button
+            id="prevBtn"
+            class="bg-green-500 text-white p-2 rounded-md hover:bg-green-600 focus:ring-2 focus:ring-green-400"
+            onclick="changePage(-1)"
+            disabled
+          >
+            Previous
+          </button>
+          <span id="pageIndicator" class="font-semibold text-green-800"></span>
+          <button
+            id="nextBtn"
+            class="bg-green-500 text-white p-2 rounded-md hover:bg-green-600 focus:ring-2 focus:ring-green-400"
+            onclick="changePage(1)"
+            disabled
+          >
+            Next
+          </button>
+        </div>
+      </div>
     </div>
 
-    <!-- Error message if API fetch fails -->
-    <p id="error-message"></p>
+    <script>
+      let currentPage = 1;
+      const itemsPerPage = 5;
+      let fetchedData = [];
 
-    <!-- Table to display the fetched data -->
-    <table id="data-table" class="table table-striped">
-        <thead>
-            <tr>
-                <th>API Response</th>
-                <th>Value</th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- Data will be inserted here -->
-        </tbody>
-    </table>
-</div>
+      async function fetchData() {
+        const url = document.getElementById("urlInput").value;
+        const tableBody = document.getElementById("tableBody");
+        tableBody.innerHTML = ""; // Hapus data sebelumnya
 
-<!-- Bootstrap JS and dependencies -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-
-<script>
-    // Variabel default untuk background image
-    let backgroundImages = {
-        default: 'https://www.mckinsey.com/spContent/bespoke/tech-trends-2024-hero-nav/techtrends-hero-desktop.jpg',
-        alternative: 'https://www.mckinsey.com/spContent/bespoke/tech-trends-2024-hero-nav/techtrends-hero-desktop.jpg'
-    };
-
-    // Mengatur background image dari kode secara langsung
-    function setBackgroundImage(imageType = 'default') {
-        document.body.style.backgroundImage = `url(${backgroundImages[imageType]})`;
-    }
-
-    // Fungsi untuk fetch data dari API
-    document.getElementById('fetchDataButton').addEventListener('click', () => {
-        const apiUrl = document.getElementById('apiUrlInput').value;
-        const tableBody = document.querySelector('#data-table tbody');
-        const errorMessage = document.getElementById('error-message');
-
-        // Clear previous data and error message
-        tableBody.innerHTML = '';
-        errorMessage.textContent = '';
-
-        // Check if the API URL is empty
-        if (!apiUrl) {
-            errorMessage.textContent = 'Please enter a valid API URL.';
-            return;
+        try {
+          const response = await fetch(url);
+          if (!response.ok) {
+            throw new Error("Network response was not ok");
+          }
+          fetchedData = await response.json();
+          currentPage = 1; // Reset ke halaman pertama setelah fetch
+          displayPage(currentPage);
+        } catch (error) {
+          console.error("Fetch error:", error);
         }
+      }
 
-        // Fetch data from the input API URL
-        fetch(apiUrl)
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Network response was not ok');
-                }
-                return response.json();
-            })
-            .then(data => {
-                // Cek apakah data yang didapatkan berbentuk array atau object
-                if (Array.isArray(data)) {
-                    data.forEach((item, index) => {
-                        const row = document.createElement('tr');
-                        row.innerHTML = `
-                            <td>Item ${index + 1}</td>
-                            <td>${JSON.stringify(item)}</td>
-                        `;
-                        tableBody.appendChild(row);
-                    });
-                } else if (typeof data === 'object') {
-                    // Tampilkan key-value dari object
-                    Object.keys(data).forEach(key => {
-                        const row = document.createElement('tr');
-                        row.innerHTML = `
-                            <td>${key}</td>
-                            <td>${JSON.stringify(data[key])}</td>
-                        `;
-                        tableBody.appendChild(row);
-                    });
-                } else {
-                    errorMessage.textContent = 'Unsupported data format.';
-                }
-                
-                // Setelah fetch data sukses, ubah gambar latar belakang
-                setBackgroundImage('alternative'); // Mengganti dengan gambar alternatif
-            })
-            .catch(error => {
-                errorMessage.textContent = 'Error fetching data: ' + error.message;
-            });
-    });
+      function displayPage(page) {
+        const tableBody = document.getElementById("tableBody");
+        tableBody.innerHTML = ""; // Hapus data sebelumnya
+        const startIndex = (page - 1) * itemsPerPage;
+        const endIndex = startIndex + itemsPerPage;
+        const pageData = fetchedData.slice(startIndex, endIndex);
 
-    // Set gambar latar belakang default ketika halaman dimuat
-    setBackgroundImage();
-</script>
+        pageData.forEach((item) => {
+          const row = document.createElement("tr");
 
-</body>
+          const idCell = document.createElement("td");
+          idCell.textContent = item.id;
+          idCell.classList.add("py-2", "px-4", "border-b", "text-sm");
+          row.appendChild(idCell);
+
+          const titleCell = document.createElement("td");
+          titleCell.textContent = item.title;
+          titleCell.classList.add("py-2", "px-4", "border-b", "text-sm");
+          row.appendChild(titleCell);
+
+          const bodyCell = document.createElement("td");
+          bodyCell.textContent = item.body;
+          bodyCell.classList.add("py-2", "px-4", "border-b", "text-sm");
+          row.appendChild(bodyCell);
+
+          tableBody.appendChild(row);
+        });
+
+        document.getElementById(
+          "pageIndicator"
+        ).textContent = `Page ${currentPage} of ${Math.ceil(
+          fetchedData.length / itemsPerPage
+        )}`;
+        document.getElementById("prevBtn").disabled = currentPage === 1;
+        document.getElementById("nextBtn").disabled =
+          currentPage === Math.ceil(fetchedData.length / itemsPerPage);
+      }
+
+      function changePage(direction) {
+        currentPage += direction;
+        displayPage(currentPage);
+      }
+
+      // Partikel bulat
+      const canvas = document.getElementById("particleCanvas");
+      const ctx = canvas.getContext("2d");
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+
+      const particles = [];
+      const particleCount = 100; // Jumlah partikel bulat
+
+      // Buat partikel
+      function createParticle() {
+        const radius = Math.random() * 5 + 2; // Radius partikel
+        const x = Math.random() * canvas.width;
+        const y = Math.random() * canvas.height;
+        const color = `rgba(34, 197, 94, ${Math.random()})`; // Warna hijau
+        const speedX = (Math.random() - 0.5) * 2; // Kecepatan horizontal
+        const speedY = (Math.random() - 0.5) * 2; // Kecepatan vertikal
+
+        particles.push({ x, y, radius, color, speedX, speedY });
+      }
+
+      for (let i = 0; i < particleCount; i++) {
+        createParticle();
+      }
+
+      function drawParticles() {
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        particles.forEach((p) => {
+          ctx.fillStyle = p.color;
+          ctx.beginPath();
+          ctx.arc(p.x, p.y, p.radius, 0, Math.PI * 2);
+          ctx.fill();
+
+          // Update posisi partikel
+          p.x += p.speedX;
+          p.y += p.speedY;
+
+          // Jika partikel keluar dari batas, reset posisi
+          if (p.x < 0 || p.x > canvas.width || p.y < 0 || p.y > canvas.height) {
+            p.x = Math.random() * canvas.width;
+            p.y = Math.random() * canvas.height;
+          }
+        });
+        requestAnimationFrame(drawParticles);
+      }
+
+      drawParticles();
+    </script>
+  </body>
 </html>
